src/client/chrome/css/app.css
@import url("./daterangepicker.css");

$banana: #FFDB5C;
$banana-dark: #F9D34A;
$electric-blue: #4897D8;
$electric-blue-dark: #2B82CA;
$lime: #77f200;
$lime-dark: #6ad304;
$light-blue: #dbedfc;
$watermelon: #FA6E59;
$watermelon-dark: #F95339;
$canteloupe: #F8A055;
$canteloupe-dark: #F68828;
$base-white: #FAFAFA;
$bar-height: 40px;
$modal-background: #e5eefc;

body {
   width:auto;
   height:auto;
   overflow: hidden;
   background-color: $base-white;
   color: $electric-blue;
   font-family: 'Raleway', sans-serif;
}

.vertical-center{
  align-self: center;
}

.app-container{
  height:50px;
}

#content-body{
  height: 92.5vh;
}

#lookback-content{
  height: 100%;
}

.page-url-bar {
  height: 60px;
  line-height: 35px;
  margin: 5px auto;
  border-radius: 3px;
  width: 95%;
  background-color: $electric-blue;
  padding: 6px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.bar-text-col{
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;;
  color: $base-white;
  font-size: 12px;
  line-height: 15px;
  width: 45%;
}

.bar-text-col p{
  margin: 0;
}


//WC TODO: change css of blacklist bar and url bar to common component?
.blacklist-bar {
  height: 40px;
  line-height: 40px;
  margin: 5px auto;
  border-radius: 3px;
  width: 95%;
  background-color: $canteloupe;
  color: $base-white;
  padding: 0px 6px;
  display: flex;
  justify-content: space-between;
}

.blacklist-button {
  line-height: $bar-height;
  height: $bar-height;
}

.blacklist-bar-info {
  display: flex;
  height: $bar-height;
  width: 150px;
  justify-content: space-between;
}

.url-bar-category {
  color: $base-white;
  float: left;
  background-color: $canteloupe;
  padding: 0 10px;
  height: 30px;
  border-radius: 2px;
  margin: 5px;
  display: flex;
  justify-content: space-between;
  line-height: 30px;
}

.url-bar-category-times {
  display: inline;
  position: relative;
  padding-left: 10px;
}
.url-bar-category-times:hover{
  color: $watermelon;
}

.url{
  color: $banana;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 95%;
  font-size: 15px;
}

.url:hover {
  color: $base-white;
}

.url-categories{
  display: flex;
  float:right;
  overflow: auto;
  margin-right: 1%;
  width: 45%;
}

.lookback-container{
  width: 95%;
  height: calc(100% - 250px);
  overflow: scroll;
  background-color: white;
  /*top, right, bottom, left*/
  margin: 5px 30px 5px 30px;
  border:solid 1px $electric-blue;
  position:absolute;
  min-width: 800px;
}

.domain-info {
  padding-left: 5px;
  padding-right: 5px;
}

.lookback-graph-container{
  /*height: calc(100% - 125px);*/
  min-width: 800px;
  /*padding-top: 10px;*/
}

.lookback-details-container{
  text-align: center;
  position: relative;
  padding: 10px;
  width: 100%;
  height: 125px;
  background-color: $canteloupe;
  color: $base-white;
  .h4{
    color: $canteloupe;
    margin: 5px;
  }
  .p{
    margin-right: 30px;
  }
}

/*BUTTONS*/
#back-button{
  border: 0;
  background: $electric-blue;
  border-radius: 4px;
  color: $base-white;
  font-size: 15;
  transition-duration: 0.4s;
  margin-right: 5px;
  margin-left: 5px;
  height: 27px;
}

#back-botton:hover {
    background: red;
    color: red;
}

.side-bar-title{
  text-align: center;
  padding: 10px;
  font-weight: bold;
  color: $base-white;
  background-color: $canteloupe;
  font-size: large;

}

.side-bar-container{
  color: $canteloupe;
  display: inline-block;
  width: 18%;
  height: 100%;
  background-color: $base-white;
  border: solid 3px $canteloupe;
  border-top: 0px;
  overflow-y: scroll;
}

.hide-overflow{
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.domain-bar{
  height: 22px;
  border: solid 1px $electric-blue;
  color: $canteloupe;
  display:inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 1px;
  border-radius: 2px;
  padding: 0 2px;
  position:flex;
  z-index: 10;
  min-width: 24px;
  &:hover {
    border-color: $canteloupe;
  }
}

.domain-favicon {
  width: 15px;
  height: 15px;
  margin-bottom: 4px;
  margin-right: 8px;
}

.display-favicon {
  width:25px;
  height:25px;
  margin-right: 10px;
}

.flex-row{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.previousPath {
  border-color: $banana;
}

start-time-label .end-time-label{
  font-size: 15;
  color: $electric-blue;
  width: auto;
}

.site-title{
  font-size: 35px;
  margin-right: 15px;
  color: $base-white;
  font-weight: bold;
  font-family: 'Poiret One', cursive;
}

.search-results-container {
  width: 80%;
  height: 97%;
  margin: 5px auto;
  overflow: scroll;
}

.categories-page {
  height: 92.5vh;
  display: flex;
  flex-direction: row;
}

.vertical-axis-label {
  transform: rotate(270deg);
  transform-origin: left top 0;
  font-size: 20;
  position: absolute;
  top: 600px;
}

.time-labels{
  margin-left: 30px;
  margin-right: 15px;
  margin-top: 10px;
  margin-bottom: 10px;
  height: 40px;
  min-width: 755px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

#time-break-line-label1{
  position: absolute;
  left:33%;
}
#time-break-line-label2{
  position:absolute;
  left:63%;
}

#end-date-label{
  margin-left: auto;
}

#time-break-container{
  height:100%;
  width:100%;
  z-index:1;
  position:absolute;
  display: flex;
}

#tabs-container{
  height:100%;
  width:100%;
  z-index:10;
  position:relative;
}

.time-break-line{
  height:100%;
  border-right: 1px solid $banana;
  position:relative;
  z-index: 1;
}

#first-time-break{
  width: 33%;
  float:left;
}

#second-time-break{
  width: 33%;
  float: left;
}


.nav-bar-button {
  border: none;
  background-color: $electric-blue;
  color: $banana;
  margin: 10px;
  margin-top: 15px;
  font-size: medium;
  padding: 0px;
  outline: none;
}
.nav-bar-button:hover {
  color: $base-white;
}
/* ... */

